# ddns-web-api

./: .env.example  Cargo.toml  README.md
src/: constants.rs  handlers.rs  main.rs  serializers.rs
src/api/: constants.rs  ddns.rs  handlers.rs  mod.rs  routes.rs
src/api/ddns/: handlers.rs  routes.rs  serializers.rs
src/config/: base.rs
src/core/: mod.rs  routes.rs  serializers.rs
