[package]
name = "ddns-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.9.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
derive_more = "0.99.17"
paste = "1.0.9"